# nova-sell

./: Dockerfile  README.md  dubizzle_login_mac.py  nova_sonic_sim.py  pyproject.toml
project/: __init__.py  acp.py  activities.py  config.py  constants.py  dubizzle_login.py  fb_login.py  run_worker.py  workflow.py
project/models/: __init__.py  conversation.py  listing.py
project/services/: __init__.py  anti_ban.py  browser_automation.py  memory_store.py  notification_service.py  nova_act_automation.py  nova_llm.py  nova_sonic.py
project/state_machines/: __init__.py  novasell_agent.py
project/workflows/: __init__.py  terminal_states.py
project/workflows/sell/: __init__.py  active_listing.py  awaiting_approval.py  listing_generation.py  object_detection.py  pricing.py  publishing.py  waiting_for_image.py
