[project]
name = "novasell-agent"
version = "2.0.0"
description = "NovaSell - Autonomous AI Sales Agent for Dubizzle powered by AWS Nova"
requires-python = ">=3.12"
dependencies = [
    "agentex==0.0.8",
    "temporalio>=1.5.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "termcolor>=2.0.0",
    "httpx>=0.25.0",
    "Pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyotp>=2.9.0",
    "requests>=2.31.0",
    "nova-act>=3.1.157.0,<4.0.0",
    "boto3>=1.35.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]